[package]
name = "bazoozoo"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
matchbox_socket = "0.8"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[[bin]]
name = "bazoozoo"
path = "src/main.rs"
